tests/semantica/valid/while/test1.ctds
program 
    {
		void main(){
			while(true) {
				return;
			}
		}
    }