tests/semantica/invalid/while/test1.ctds
program
	{
		void main(){
			while(2){
				
			}
		}
	}